force-app/main/default/objects/Opportunity/fields/NTE_Pricing_Status__c.field-meta.xml
<CustomField>
    <fullName>NTE_Pricing_Status__c</fullName>
    <label>NTE Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculated</fullName>
            </value>
            <value>
                <fullName>Review required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>