force-app/main/default/objects/Opportunity/fields/NTE_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>NTE_Purchase_Order__c</fullName>
    <label>NTE Purchase Order Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>