force-app/main/default/objects/Opportunity/fields/NTE_Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NTE_Purchase_Order_Number__c</fullName>
    <label>NTE Purchase Order Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>