force-app/main/default/objects/Opportunity/fields/NTE_Quote_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Quote_Provided__c</fullName>
    <description>Selected from the NTE Master Panel after the quote has been sent.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Quote Provided</label>
    <type>Checkbox</type>
</CustomField>