force-app/main/default/objects/Opportunity/fields/NTE_Quote_Provided_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Quote_Provided_At__c</fullName>
    <label>NTE Quote Provided At</label>
    <type>DateTime</type>
</CustomField>