force-app/main/default/objects/Opportunity/fields/NTE_Quote_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Quote_Provided_By__c</fullName>
    <label>NTE Quote Provided By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>