force-app/main/default/objects/Opportunity/fields/NTE_Quote_Required_for_PO__c.field-meta.xml
<CustomField>
    <fullName>NTE_Quote_Required_for_PO__c</fullName>
    <label>NTE Quotation Required for PO</label>
    <length>40</length>
    <type>Text</type>
</CustomField>