force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Email__c</fullName>
    <label>NTE Secondary Contact Email</label>
    <type>Email</type>
</CustomField>