force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Mobile__c</fullName>
    <label>NTE Secondary Contact Mobile</label>
    <type>Phone</type>
</CustomField>