force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Name__c</fullName>
    <label>NTE Secondary Contact Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>