force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Phone__c</fullName>
    <label>NTE Secondary Contact Work Phone</label>
    <type>Phone</type>
</CustomField>