force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Prefix__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Prefix__c</fullName>
    <label>NTE Secondary Contact Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>