force-app/main/default/objects/Opportunity/fields/NTE_Secondary_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>NTE_Secondary_Contact_Title__c</fullName>
    <label>NTE Secondary Contact Job Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>