force-app/main/default/objects/Opportunity/fields/NTE_Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>NTE_Sponsor_Package__c</fullName>
    <label>NTE Sponsorship Package</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headline Partner</fullName>
            </value>
            <value>
                <fullName>Gold Partner</fullName>
            </value>
            <value>
                <fullName>Premier Partner</fullName>
            </value>
            <value>
                <fullName>Champion Partner</fullName>
            </value>
            <value>
                <fullName>Zone Sponsor</fullName>
            </value>
            <value>
                <fullName>Community Stage Sponsor</fullName>
            </value>
            <value>
                <fullName>Podcast Corner Sponsor</fullName>
            </value>
            <value>
                <fullName>Event Guide Sponsor</fullName>
            </value>
            <value>
                <fullName>Delegate Tote Bag Sponsor</fullName>
            </value>
            <value>
                <fullName>Helmet Bay Sponsor</fullName>
            </value>
            <value>
                <fullName>Auditorium Sponsor</fullName>
            </value>
            <value>
                <fullName>Live Stream Sponsor</fullName>
            </value>
            <value>
                <fullName>Wristband Sponsor</fullName>
            </value>
            <value>
                <fullName>Escapade Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>