force-app/main/default/objects/Opportunity/fields/NTE_Sponsored_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Sponsored_Name__c</fullName>
    <label>NTE Sponsored Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>