force-app/main/default/objects/Opportunity/fields/NTE_Staff_Update_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Staff_Update_Completed_At__c</fullName>
    <description>Set automatically after the applicable exhibitor or partner / sponsor staff update has been applied successfully.</description>
    <label>NTE Staff Update Completed At</label>
    <type>DateTime</type>
</CustomField>