force-app/main/default/objects/Opportunity/fields/NTE_Stand_Colleagues__c.field-meta.xml
<CustomField>
    <fullName>NTE_Stand_Colleagues__c</fullName>
    <label>NTE Stand Colleagues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>