force-app/main/default/objects/Opportunity/fields/NTE_Stand_Extra_Notes__c.field-meta.xml
<CustomField>
    <fullName>NTE_Stand_Extra_Notes__c</fullName>
    <label>NTE Stand Extra Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>