force-app/main/default/objects/Opportunity/fields/NTE_Stand_Power__c.field-meta.xml
<CustomField>
    <fullName>NTE_Stand_Power__c</fullName>
    <label>NTE Stand Power</label>
    <length>40</length>
    <type>Text</type>
</CustomField>