force-app/main/default/objects/Opportunity/fields/NTE_Stand_Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>NTE_Stand_Special_Requirements__c</fullName>
    <label>NTE Stand Special Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>