force-app/main/default/objects/Opportunity/fields/NTE_Supplier_Agreement_Required__c.field-meta.xml
<CustomField>
    <fullName>NTE_Supplier_Agreement_Required__c</fullName>
    <label>NTE Supplier Agreement Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>