force-app/main/default/objects/Opportunity/fields/NTE_Terms_Accepted__c.field-meta.xml
<CustomField>
    <fullName>NTE_Terms_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Terms Accepted</label>
    <type>Checkbox</type>
</CustomField>