force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Invoice_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Invoice_At__c</fullName>
    <label>NTE Top-up Invoice Provided At</label>
    <type>DateTime</type>
</CustomField>