force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Invoice_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Invoice_By__c</fullName>
    <label>NTE Top-up Invoice Provided By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>