force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Invoice_Provided__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Invoice_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Top-up Invoice Provided</label>
    <type>Checkbox</type>
</CustomField>