force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Payment_At__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Payment_At__c</fullName>
    <label>NTE Top-up Payment Received At</label>
    <type>DateTime</type>
</CustomField>