force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Payment_By__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Payment_By__c</fullName>
    <label>NTE Top-up Payment Received By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>