force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NTE Top-up Payment Received</label>
    <type>Checkbox</type>
</CustomField>