force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Staff_Count__c</fullName>
    <label>NTE Top-up Staff Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>