force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Staff_Names__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Staff_Names__c</fullName>
    <label>NTE Top-up Staff Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>