force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Staff_Required__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Staff_Required__c</fullName>
    <label>NTE Top-up Staff Required</label>
    <length>40</length>
    <type>Text</type>
</CustomField>