force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Staff_Total__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Staff_Total__c</fullName>
    <label>NTE Top-up Staff Total (ex VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>