force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_Total_Inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_Total_Inc_VAT__c</fullName>
    <formula>BLANKVALUE(NTE_Top_Up_Staff_Total__c, 0) + NTE_Top_Up_VAT_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Top-up Total (inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>