force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_VAT_Rate__c</fullName>
    <defaultValue>20</defaultValue>
    <label>NTE Top-up VAT Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>