force-app/main/default/objects/Opportunity/fields/NTE_Top_Up_VAT_Total__c.field-meta.xml
<CustomField>
    <fullName>NTE_Top_Up_VAT_Total__c</fullName>
    <formula>ROUND(BLANKVALUE(NTE_Top_Up_Staff_Total__c, 0) * BLANKVALUE(NTE_Top_Up_VAT_Rate__c, 20) / 100, 2)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Top-up VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>