force-app/main/default/objects/Opportunity/fields/NTE_Total_Including_VAT__c.field-meta.xml
<CustomField>
    <fullName>NTE_Total_Including_VAT__c</fullName>
    <formula>IF(NOT(NTE_Pricing_Ready__c), NULL, BLANKVALUE(Amount, NTE_Listed_Price_Total__c + NTE_VAT_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Booking Total (inc VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>