force-app/main/default/objects/Opportunity/fields/NTE_Total_Staff_Count__c.field-meta.xml
<CustomField>
    <fullName>NTE_Total_Staff_Count__c</fullName>
    <label>NTE Total Staff Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>