force-app/main/default/objects/Opportunity/fields/NTE_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>NTE_Trading_Name__c</fullName>
    <label>NTE Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>