force-app/main/default/objects/Opportunity/fields/NTE_VAT_Total__c.field-meta.xml
<CustomField>
    <fullName>NTE_VAT_Total__c</fullName>
    <formula>IF(NOT(NTE_Pricing_Ready__c), NULL, IF(ISBLANK(Amount), ROUND(NTE_Listed_Price_Total__c * BLANKVALUE(NTE_VAT_Rate__c, 20) / 100, 2), Amount - NTE_Listed_Price_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>NTE Booking VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>