force-app/main/default/objects/Opportunity/recordTypes/NTE_Event_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>NTE_Event_Opportunity</fullName>
    <active>true</active>
    <businessProcess>NTE_Sales_Process</businessProcess>
    <description>National Transition Event exhibitor, partner and sponsor opportunities.</description>
    <label>NTE Event Opportunity</label>
</RecordType>