force-app/main/default/objects/Opportunity/listViews/NTE_Quotes_Required.listView-meta.xml
<ListView>
    <fullName>NTE_Quotes_Required</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND (6 AND 7)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>NTE_Quote_Required_for_PO__c</columns>
    <columns>NTE_Quote_Provided__c</columns>
    <columns>NTE_Listed_Price_Total__c</columns>
    <columns>NTE_Pricing_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.NTE_Event_Opportunity</value>
    </filters>
    <filters>
        <field>NTE_Event_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>NTE_Source_Form_Type__c</field>
        <operation>equals</operation>
        <value>Exhibitor Application,Partner / Sponsor Application</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NTE_Quote_Required_for_PO__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>NTE_Quote_Provided__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>NTE Quotes Required</label>
</ListView>