force-app/main/default/objects/Opportunity/listViews/NTE_Staff_Updates_Due.listView-meta.xml
<ListView>
    <fullName>NTE_Staff_Updates_Due</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND (6)</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>Booking_Reference__c</columns>
    <columns>NTE_Staff_Update_Completed_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.NTE_Event_Opportunity</value>
    </filters>
    <filters>
        <field>NTE_Event_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>NTE_Source_Form_Type__c</field>
        <operation>equals</operation>
        <value>Exhibitor Application,Partner / Sponsor Application</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.WON</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NTE_Staff_Update_Completed_At__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>NTE Staff Updates Due</label>
</ListView>