force-app/main/default/objects/Opportunity/listViews/NTE_Top_Up_Payments_Due.listView-meta.xml
<ListView>
    <fullName>NTE_Top_Up_Payments_Due</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5) AND 6 AND 7</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>NTE_Top_Up_Staff_Total__c</columns>
    <columns>NTE_Top_Up_Invoice_Provided__c</columns>
    <columns>NTE_Top_Up_Payment_Received__c</columns>
    <filterScope>Everything</filterScope>
    <filters><field>OPPORTUNITY.RECORDTYPE</field><operation>equals</operation><value>Opportunity.NTE_Event_Opportunity</value></filters>
    <filters><field>NTE_Event_Code__c</field><operation>notEqual</operation></filters>
    <filters><field>OPPORTUNITY.STAGE_NAME</field><operation>notEqual</operation><value>Closed Lost</value></filters>
    <filters><field>NTE_Top_Up_Invoice_Required__c</field><operation>equals</operation><value>1</value></filters>
    <filters><field>NTE_Top_Up_Staff_Total__c</field><operation>greaterThan</operation><value>0</value></filters>
    <filters><field>NTE_Top_Up_Invoice_Provided__c</field><operation>equals</operation><value>1</value></filters>
    <filters><field>NTE_Top_Up_Payment_Received__c</field><operation>equals</operation><value>0</value></filters>
    <label>NTE Staff Top-up Payments Due</label>
</ListView>